# ragtech-3200VA-cli

./: .gitignore  .mise.toml  Cargo.toml  Dockerfile.nobreak  LICENSE-MIT  Makefile  README.md  docker-compose.nobreak.stream.yml  docker-compose.nobreak.yml
.github/workflows/: docker-publish.yml
crates/nobreak-cli/: Cargo.toml
crates/nobreak-cli/src/: exporter.rs  exporter_tests.rs  main.rs  viewer.rs
crates/nobreak-core/: Cargo.toml
crates/nobreak-core/src/: config.rs  driver.rs  lib.rs  monitor.rs  snapshot.rs
docs/: fields.md  grafana.md  install.md  nobreak-monitor-execution-plan.md  nobreak-monitor-tech-details.md  nobreak-monitor-ultraspec.md  ops.md  read-only-contract.md  scope.md
observability/: loki-config.yml  promtail-config.yml
observability/grafana/provisioning/dashboards/: default.yml
observability/grafana/provisioning/dashboards/json/: nobreak-command-center.json
observability/grafana/provisioning/datasources/: loki.yml
packaging/systemd/: nobreakd.service
packaging/udev/: 99-nobreak.rules
schemas/: snapshot.schema.json
